--- a/src/sass/Recetas.sass
+++ b/src/sass/Recetas.sass
@@ -53,7 +53,9 @@
     max-height: 480px
     .fila1-re
         display: grid
+        gap:20px
         grid-template-columns: repeat(2, 1fr)
+
     
     .fila2-re
         margin-top: 2.5%
@@ -87,8 +89,8 @@
 
 .medicamento-re label, .medicamento-re input
     display: block
-    width: 140%
-    margin-left: -40%
+    width: 100%
+    
     margin-bottom: 10px
 
 .listCantMed
@@ -110,7 +112,6 @@
 
 .listNombMed
     margin-top: -2.5%
-    margin-left: -40.1%
     position: relative
     .contenedorListNombreMedic 
         position: absolute   
